# nanapi

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .ignore  Dockerfile  README.md  edgedb.toml  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.forgejo/workflows/: ci.yaml  deploy_env.py  meta.py
.github/workflows/: ci.yml
dbschema/: amq.esdl  anilist.esdl  calendar.esdl  default.esdl  histoire.esdl  poll.esdl  pot.esdl  presence.esdl  projection.esdl  quizz.esdl  redis.esdl  reminder.esdl  role.esdl  user.esdl  waicolle.esdl
dbschema/migrations/: 00001-m1mgsap.edgeql  00002-m1kcicm.edgeql  00003.edgeql  00004-m1x4rw6.edgeql  00005-m1vxcph.edgeql  00006.edgeql  00007.edgeql  00008.edgeql  00009.edgeql  00010.edgeql  00011.edgeql  00012.edgeql  00013.edgeql  00014-m134f3e.edgeql  00015.edgeql  00016.edgeql  00017.edgeql  00018.edgeql  00019-m1feetb.edgeql  00020-m1sbe5j.edgeql  00021-m1sbqiu.edgeql  00022-m1connf.edgeql  00023-m1le6vo.edgeql  00024-m1h2cd2.edgeql  00025-m13ptnp.edgeql  00026-m1hq7rm.edgeql  00027-m1foqen.edgeql  00027-m1mim5p.edgeql  00028-m1lyp3h.edgeql  00028-m1vnk3u.edgeql  00029-m1cpmoz.edgeql  00029-m1mim5p.edgeql
nanapi/: __main__.py  example.local_settings.py  fastapi.py  nanachan_v2_migrate.py  settings.py
nanapi/database/amq/: account_merge.edgeql  account_merge.py  account_select.edgeql  account_select.py  settings_merge.edgeql  settings_merge.py  settings_select_all.edgeql  settings_select_all.py
nanapi/database/anilist/: account_merge.edgeql  account_merge.py  account_replace_entries.py  account_select_all.edgeql  account_select_all.py  anime_select_ids_upcoming.edgeql  anime_select_ids_upcoming.py  c_edge_merge_combined_by_chara.py  c_edge_merge_multiple.py  c_edge_select_filter_chara.edgeql  c_edge_select_filter_chara.py  c_edge_select_filter_media.edgeql  c_edge_select_filter_media.py  c_edge_select_filter_staff.edgeql  c_edge_select_filter_staff.py  chara_get_random.edgeql  chara_get_random.py  chara_merge_multiple.py  chara_select.edgeql  chara_select.py  chara_select_all_ids.edgeql  chara_select_all_ids.py  chara_select_all_names.edgeql  chara_select_all_names.py  entry_select_all.edgeql  entry_select_all.py  entry_select_filter_media.edgeql  entry_select_filter_media.py  image_save.edgeql  image_save.py  image_select.edgeql  image_select.py  media_merge_combined_charas.py  media_merge_multiple.py  media_select.edgeql  media_select.py  media_select_all_ids.edgeql  media_select_all_ids.py  media_select_all_titles.edgeql  media_select_all_titles.py  (+17 more)
nanapi/database/calendar/: guild_event_delete.edgeql  guild_event_delete.py  guild_event_merge.edgeql  guild_event_merge.py  guild_event_participant_add.edgeql  guild_event_participant_add.py  guild_event_participant_remove.edgeql  guild_event_participant_remove.py  guild_event_select.edgeql  guild_event_select.py  guild_event_select_all.edgeql  guild_event_select_all.py  guild_event_select_participant.edgeql  guild_event_select_participant.py  user_calendar_delete.edgeql  user_calendar_delete.py  user_calendar_merge.edgeql  user_calendar_merge.py  user_calendar_select.edgeql  user_calendar_select.py  user_calendar_select_all.edgeql  user_calendar_select_all.py
nanapi/database/default/: client_get_by_username.edgeql  client_get_by_username.py  client_insert.edgeql  client_insert.py
nanapi/database/histoire/: histoire_delete_by_id.edgeql  histoire_delete_by_id.py  histoire_get_by_id.edgeql  histoire_get_by_id.py  histoire_insert.edgeql  histoire_insert.py  histoire_select_id_title.edgeql  histoire_select_id_title.py
nanapi/database/poll/: poll_delete_by_message_id.edgeql  poll_delete_by_message_id.py  poll_get_by_message_id.edgeql  poll_get_by_message_id.py  poll_insert.edgeql  poll_insert.py  vote_delete.edgeql  vote_delete.py  vote_merge.edgeql  vote_merge.py
nanapi/database/pot/: pot_add.edgeql  pot_add.py  pot_get_by_user.edgeql  pot_get_by_user.py
nanapi/database/presence/: presence_delete_by_id.edgeql  presence_delete_by_id.py  presence_insert.edgeql  presence_insert.py  presence_select_all.edgeql  presence_select_all.py
nanapi/database/projection/: projo_add_event.edgeql  projo_add_event.py  projo_add_external_media.edgeql  projo_add_external_media.py  projo_add_media.edgeql  projo_add_media.py  projo_delete.edgeql  projo_delete.py  projo_delete_upcoming_events.edgeql  projo_delete_upcoming_events.py  projo_insert.edgeql  projo_insert.py  projo_participant_add.edgeql  projo_participant_add.py  projo_participant_remove.edgeql  projo_participant_remove.py  projo_remove_external_media.edgeql  projo_remove_external_media.py  projo_remove_media.edgeql  projo_remove_media.py  projo_select.edgeql  projo_select.py  projo_update_message_id.edgeql  projo_update_message_id.py  projo_update_name.edgeql  projo_update_name.py  projo_update_status.edgeql  projo_update_status.py
nanapi/database/quizz/: game_delete_by_message_id.edgeql  game_delete_by_message_id.py  game_end.edgeql  game_end.py  game_get_by_id.edgeql  game_get_by_id.py  game_get_current.edgeql  game_get_current.py  game_get_last.edgeql  game_get_last.py  game_new.edgeql  game_new.py  game_select.edgeql  game_select.py  game_update_bananed.edgeql  game_update_bananed.py  quizz_delete_by_id.edgeql  quizz_delete_by_id.py  quizz_get_by_id.edgeql  quizz_get_by_id.py  quizz_get_oldest.edgeql  quizz_get_oldest.py  quizz_insert.edgeql  quizz_insert.py  quizz_set_answer.edgeql  quizz_set_answer.py
nanapi/database/redis/: data_delete_by_key.edgeql  data_delete_by_key.py  (+6 more)
nanapi/models/: amq.py  anilist.py  calendar.py  client.py  common.py  histoire.py  pot.py  presence.py  projection.py  quizz.py  reminder.py  role.py  user.py  waicolle.py
nanapi/routers/: amq.py  anilist.py  calendar.py  client.py  histoire.py  pot.py  presence.py  projection.py  quizz.py  reminder.py  role.py  user.py  waicolle.py
nanapi/tasks/: anilist.py  meilisearch.py  userlists.py
nanapi/utils/: anilist.py  calendar.py  clients.py  collages.py  fastapi.py  logs.py  misc.py  security.py  waicolle.py
(+132 files in other folders)
