[project]
name = "nanapi"
version = "0.1.0"
description = "FastAPI + EdgeDB backend for Nana-chan"
readme = "README.md"
license = "MIT"
authors = [
    { name = "NextFire", email = "git@yuru.moe" },
    { name = "odrling", email = "florianbadie@odrling.xyz" },
    { name = "Pierre Jeanjean", email = "rhiobet@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "edgedb==2.2.0",
    "fastapi==0.115.5",
    "pydantic==2.10.1",
    "aiohttp[speedups]==3.11.7",
    # https://github.com/PyYoshi/cChardet/issues/81
    "faust-cchardet==2.1.19",
    "orjson==3.10.11",
    "toolz==1.0.0",
    "backoff==2.2.1",
    "meilisearch-python-sdk==3.6.1",
    "numpy==2.1.3",
    "pillow==11.0.0",
    "rich==13.9.4",
    "discord-webhook[async]==1.3.1",
    "python-multipart==0.0.17",
    "passlib[bcrypt]==1.7.4",
    "cachetools==5.5.0",
    "asyncache==0.3.1",
    "hypercorn==0.17.3",
    "tzdata==2024.2",
    "pyjwt==2.10.0",
    "ics==0.7.2",
]

[dependency-groups]
dev = [
    "pyright==1.1.389",
    "ruff==0.8.0",
    "uvicorn==0.32.1",
    "edgedb-pydantic-codegen==2024.10.6",
    "pyinstrument==5.0.0",
]

[project.urls]
homepage = "https://github.com/Japan7/mahou.py"

[tool.pyright]
pythonVersion = "3.12"
reportDeprecated = true
ignore = ["nanapi/nanachan_v2_migrate.py"]

[tool.ruff]
line-length = 99
exclude = ["nanapi/nanachan_v2_migrate.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "SIM", "I"]
ignore = [
    # lambda expressions
    "E731",
    # ambiguous variable name
    "E741",
    # Do not perform function calls in argument defaults
    "B008",
    # Within an except clause, raise exceptions with `raise ... from err` or `raise ... from None`
    "B904",
    # `zip()` without an explicit `strict=` parameter
    "B905",
    # Use `contextlib.suppress(asyncio.CancelledError)` instead of try-except-pass
    "SIM105",
    # Use ternary operator `{contents}` instead of if-else-block
    "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"nanapi/database/*" = ["E501"]
"nanapi/*local_settings.py" = ["E501"]

[tool.ruff.format]
quote-style = "single"
